The rest of the commit lol

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NotcomfyFrontend</title>
+  <title>notcomfy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="webcomic, webcomics, art, comics, artist">
+  <meta name="author" content="Ali Al-Ramezi">
+  <meta name="description" content="Stinky webcomics for stinky people. Made by Ali Al-Ramezi">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="http://localhost:3000">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/234a51b05a.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
